# globber

./: .travis.yml  Cargo.toml  README.md  README.tpl
benches/: bench.rs
src/: lib.rs  matcher.rs  syntax.rs
