[package]
name = "globber"
version = "0.1.3"
authors = ["Connor Peticca"]
edition = "2018"

description = "Extended glob matching library"
license = "MIT"
repository = "https://github.com/CJP10/globber"
readme = "README.md"
keywords = ["glob","extended","matching"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = true